# PocketBase-OID-Loader

./: Dockerfile  README.md  __main__.py  docker-compose.yml  pocket_base_connector.py  pyproject.toml
reports/: mypy.xml
src/oid_pocketbase/: __init__.py  __main__.py  db_oid.json  pocket_base_connector.py
tests/: __init__.py  test_import.py
